Forgot the controllers and views

--- a/VictuzBeta/Views/Home/Index.cshtml
+++ b/VictuzBeta/Views/Home/Index.cshtml
@@ -1,8 +1,57 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "Home";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+<!Doctype html>
+<html lang="en">
+    <head>
+    <meta charset="UTF-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Home</title>
+    <link rel="stylesheet" href="css/bootstrap.css" />
+    </head>
+    <body>
+        <center>
+        <h1>
+            Welkom Bij Victuz!
+        </h1>
+        </center>
+
+    <nav class="navbar navbar-expand-lg bg-primary" data-bs-theme="dark">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="Home">Home</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarColor01" data-np-autofill-form-type="other" data-np-checked="1" data-np-watching="1">
+                <ul class="navbar-nav me-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="Agenda">
+                            Agenda
+                            <span class="visually-hidden">(current)</span>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="News">Nieuws</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="BecomeMember">Wordt Lid?</a>
+                    </li>
+                </ul>
+                <form class="d-flex">
+                    <input class="form-control me-sm-2" type="search" placeholder="Search" data-np-intersection-state="visible">
+                    <button class="btn btn-info my-2 my-sm-0" type="submit">Search</button>
+                </form>
+            </div>
+            @await Html.PartialAsync("_LoginPartial")
+        </div>
+    </nav>
+    <center>
+        <hr>
+        <h2>Activiteiten</h2>
+    </center>
+
+    <script src="js/bootstrap.js"></script>
+    </body>
+</html>
