Beta version adaptation

--- a/VictuzBeta/Views/Activities/Index.cshtml
+++ b/VictuzBeta/Views/Activities/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Victuz.Models.Activity>
+﻿@model IEnumerable<VictuzBeta.Models.Activity>
 
 @{
     ViewData["Title"] = "Activity";
