--- a/VictuzBeta/Views/Categories/Index.cshtml
+++ b/VictuzBeta/Views/Categories/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Victuz.Models.Category>
+﻿@model IEnumerable<VictuzBeta.Models.Category>
 
 @{
     ViewData["Title"] = "Index";
