--- a/VictuzBeta/Views/Propositions/Index.cshtml
+++ b/VictuzBeta/Views/Propositions/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Victuz.Models.Proposition>
+﻿@model IEnumerable<VictuzBeta.Models.Proposition>
 
 @{
     ViewData["Title"] = "Propositions";
