--- a/VictuzBeta/Views/Locations/Create.cshtml
+++ b/VictuzBeta/Views/Locations/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model VictuzBeta.Models.Category
+﻿@model VictuzBeta.Models.Location
 
 @{
     ViewData["Title"] = "Create";
@@ -6,7 +6,7 @@
 
 <h1>Create</h1>
 
-<h4>Category</h4>
+<h4>Location</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -18,9 +18,14 @@
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Description" class="control-label"></label>
-                <input asp-for="Description" class="form-control" />
-                <span asp-validation-for="Description" class="text-danger"></span>
+                <label asp-for="Address" class="control-label"></label>
+                <input asp-for="Address" class="form-control" />
+                <span asp-validation-for="Address" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Room" class="control-label"></label>
+                <input asp-for="Room" class="form-control" />
+                <span asp-validation-for="Room" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
