--- a/VictuzBeta/Views/Activities/Delete.cshtml
+++ b/VictuzBeta/Views/Activities/Delete.cshtml
@@ -1,8 +1,4 @@
-<<<<<<< HEAD
-﻿@model VictuzBeta.Models.Activity
-=======
-﻿@model Victuz.Models.Activity
->>>>>>> 40034713999ffddfb830ed1ef18feeae66801caf
+@model VictuzBeta.Models.Activity
 
 @{
     ViewData["Title"] = "Delete";
