--- a/VictuzBeta/Views/News/Details.cshtml
+++ b/VictuzBeta/Views/News/Details.cshtml
@@ -1,8 +1,4 @@
-<<<<<<< HEAD
-﻿@model VictuzBeta.Models.News
-=======
-﻿@model Victuz.Models.News
->>>>>>> 40034713999ffddfb830ed1ef18feeae66801caf
+@model VictuzBeta.Models.News
 
 @{
     ViewData["Title"] = "Details";
