--- a/VictuzBeta/Views/News/Index.cshtml
+++ b/VictuzBeta/Views/News/Index.cshtml
@@ -1,8 +1,4 @@
-<<<<<<< HEAD
-﻿@model IEnumerable<VictuzBeta.Models.News>
-=======
-﻿@model IEnumerable<Victuz.Models.News>
->>>>>>> 40034713999ffddfb830ed1ef18feeae66801caf
+@model IEnumerable<VictuzBeta.Models.News>
 
 @{
     ViewData["Title"] = "News";
