--- a/VictuzBeta/Views/Propositions/Index.cshtml
+++ b/VictuzBeta/Views/Propositions/Index.cshtml
@@ -1,8 +1,4 @@
-<<<<<<< HEAD
-﻿@model IEnumerable<VictuzBeta.Models.Proposition>
-=======
-﻿@model IEnumerable<Victuz.Models.Proposition>
->>>>>>> 40034713999ffddfb830ed1ef18feeae66801caf
+@model IEnumerable<VictuzBeta.Models.Proposition>
 
 @{
     ViewData["Title"] = "Propositions";
