--- a/VictuzBeta/Views/Activities/Index.cshtml
+++ b/VictuzBeta/Views/Activities/Index.cshtml
@@ -1,8 +1,4 @@
-<<<<<<< HEAD
-﻿@model IEnumerable<VictuzBeta.Models.Activity>
-=======
-﻿@model IEnumerable<Victuz.Models.Activity>
->>>>>>> 40034713999ffddfb830ed1ef18feeae66801caf
+@model IEnumerable<VictuzBeta.Models.Activity>
 
 @{
     ViewData["Title"] = "Activity";
