--- a/VictuzBeta/Views/Categories/Index.cshtml
+++ b/VictuzBeta/Views/Categories/Index.cshtml
@@ -1,8 +1,4 @@
-<<<<<<< HEAD
-﻿@model IEnumerable<VictuzBeta.Models.Category>
-=======
-﻿@model IEnumerable<Victuz.Models.Category>
->>>>>>> 40034713999ffddfb830ed1ef18feeae66801caf
+@model IEnumerable<VictuzBeta.Models.Category>
 
 @{
     ViewData["Title"] = "Index";
