--- a/VictuzBeta/Views/Propositions/Delete.cshtml
+++ b/VictuzBeta/Views/Propositions/Delete.cshtml
@@ -1,8 +1,4 @@
-<<<<<<< HEAD
-﻿@model VictuzBeta.Models.Proposition
-=======
-﻿@model Victuz.Models.Proposition
->>>>>>> 40034713999ffddfb830ed1ef18feeae66801caf
+@model VictuzBeta.Models.Proposition
 
 @{
     ViewData["Title"] = "Delete";
